blueprint in UE5

--- a/Projects/David_Nixon_Learn/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Projects/David_Nixon_Learn/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1777,6 +1777,25 @@ FirstPersonMap_C.HLOD=True
 FirstPersonMap_C.Physics=True
 FirstPersonMap_C.WorldPartition=True
 FirstPersonMap_C.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=False
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
 
 [DetailMultiObjectNodeExpansion]
 ProjectPackagingSettings=True
@@ -2022,6 +2041,8 @@ StaticMeshActor.Materials=True
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Physics=False
 Brush.Geometry=False
+K2Node_VariableSet.Variable=True
+PropertyWrapper.Variable=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2067,4 +2088,7 @@ PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
+
+[OutputLog]
+PreferredCommandExecutor=Cmd
 
